--- a/final_report.Rmd
+++ b/final_report.Rmd
@@ -132,28 +132,23 @@ In this project, we focus on identifying anomalies in financial transaction data
 
 The motivation behind this analysis stems from the critical need to identify unexpected spikes or drops in financial transactions, which could signal important events such as fraudulent activity, operational issues, or other irregularities. By uncovering such anomalies, businesses can take proactive measures, improve risk management, and enhance the integrity of their financial systems.
 
-
 *Methodology*
 
 To detect anomalies, we employed a structured and systematic approach using time-series analysis methods supported by the anomalize R package. The steps followed are:
 
-**Data Preprocessing:**
-The Date of Transaction column was converted into a proper date format, and transaction amounts were aggregated daily. This ensured the data was in a suitable form for time-series analysis, making it easier to observe trends over time.
+**Data Preprocessing:** The Date of Transaction column was converted into a proper date format, and transaction amounts were aggregated daily. This ensured the data was in a suitable form for time-series analysis, making it easier to observe trends over time.
 
-**Time-Series Decomposition:**
-Using STL (Seasonal-Trend decomposition using Loess), the time series was broken into three components:
+**Time-Series Decomposition:** Using STL (Seasonal-Trend decomposition using Loess), the time series was broken into three components:
 
-- Trend: Long-term patterns in the data.
+-   Trend: Long-term patterns in the data.
 
-- Seasonality: Recurring patterns over fixed intervals.
+-   Seasonality: Recurring patterns over fixed intervals.
 
-- Remainder: Irregular fluctuations that could represent potential anomalies.
+-   Remainder: Irregular fluctuations that could represent potential anomalies.
 
-**Anomaly Detection:**
-The Interquartile Range (IQR) method was applied to the remainder component of the time series. This approach effectively flags anomalies by identifying points that deviate significantly from the expected range, while being robust to outliers.
+**Anomaly Detection:** The Interquartile Range (IQR) method was applied to the remainder component of the time series. This approach effectively flags anomalies by identifying points that deviate significantly from the expected range, while being robust to outliers.
 
-**Visualization:**
-Anomalies were visualized on a time-series plot with clear highlights, making it easy to observe unusual spikes or drops. The Y-axis was formatted to show transaction amounts in thousands for better readability.
+**Visualization:** Anomalies were visualized on a time-series plot with clear highlights, making it easy to observe unusual spikes or drops. The Y-axis was formatted to show transaction amounts in thousands for better readability.
 
 This methodology was chosen because time-series decomposition separates noise from regular patterns, while the IQR method provides a simple yet powerful statistical approach for detecting anomalies.
 
@@ -227,27 +222,22 @@ cat("F1 Score: ", f1_score, "\n")
 
 
 ```
+
 The following key steps and insights were derived from the analysis:
 
-**Data Aggregation:**
-Transaction amounts were grouped by day to observe daily trends. This provided a clearer picture of how financial activity fluctuates over time.
+**Data Aggregation:** Transaction amounts were grouped by day to observe daily trends. This provided a clearer picture of how financial activity fluctuates over time.
 
-**Anomaly Detection:**
-By decomposing the time series and applying the IQR method, significant deviations from the expected transaction patterns were identified. These anomalies represent unusual spikes or drops that warrant further investigation.
+**Anomaly Detection:** By decomposing the time series and applying the IQR method, significant deviations from the expected transaction patterns were identified. These anomalies represent unusual spikes or drops that warrant further investigation.
 
-**Visualization of Anomalies:**
-The final time-series plot highlights anomalies as dark points outside a shaded region of expected values. The Y-axis was reformatted to display transaction amounts in thousands with a dollar sign for improved clarity.
+**Visualization of Anomalies:** The final time-series plot highlights anomalies as dark points outside a shaded region of expected values. The Y-axis was reformatted to display transaction amounts in thousands with a dollar sign for improved clarity.
 
 The results from the analysis revealed:
 
-- A clear separation between regular transaction behavior and anomalies.
-- The anomalies, displayed as points outside the expected range, indicate significant financial irregularities. These     could stem from events like large-scale transactions, fraud, or system anomalies.
-- The shaded grey area represents the acceptable range based on trend and seasonality, making it visually intuitive to    spot deviations.
+-   A clear separation between regular transaction behavior and anomalies.
+-   The anomalies, displayed as points outside the expected range, indicate significant financial irregularities. These could stem from events like large-scale transactions, fraud, or system anomalies.
+-   The shaded grey area represents the acceptable range based on trend and seasonality, making it visually intuitive to spot deviations.
 
-**Key Insights:**
-The model effectively flags irregularities that may otherwise go unnoticed in large datasets. By focusing on anomalies, businesses can take swift corrective measures and prioritize investigations into unusual activities.
-
-
+**Key Insights:** The model effectively flags irregularities that may otherwise go unnoticed in large datasets. By focusing on anomalies, businesses can take swift corrective measures and prioritize investigations into unusual activities.
 
 *Discussion:*
 
@@ -255,15 +245,11 @@ The model effectively flags irregularities that may otherwise go unnoticed in la
 
 **Data Preparation and Cleaning:**
 
-The dataset was loaded and cleaned, with the Date of Transaction column converted into a usable date-time format.
-Daily totals of transaction amounts were aggregated to simplify the analysis and highlight trends over time.
-Anomaly Detection Using the anomalize Package:
+The dataset was loaded and cleaned, with the Date of Transaction column converted into a usable date-time format. Daily totals of transaction amounts were aggregated to simplify the analysis and highlight trends over time. Anomaly Detection Using the anomalize Package:
 
-The time series was decomposed into trend, seasonal, and remainder components using STL decomposition.
-Anomalies were identified in the remainder component based on statistical thresholds (Interquartile Range - IQR), isolating data points that deviate significantly from expected patterns.
-Detected anomalies were recomposed back into the time series for visualization.
+The time series was decomposed into trend, seasonal, and remainder components using STL decomposition. Anomalies were identified in the remainder component based on statistical thresholds (Interquartile Range - IQR), isolating data points that deviate significantly from expected patterns. Detected anomalies were recomposed back into the time series for visualization.
 
-**Visualization:
+\*\*Visualization:
 
 A time-series plot was generated with anomalies highlighted, providing a clear view of when unusual spikes or drops occurred.
 
@@ -281,11 +267,9 @@ Recall: Proportion of actual anomalies correctly identified.
 
 F1-Score: A harmonic mean of precision and recall, providing a balanced measure of performance.
 
-
 **Results and Output:**
 
-The detected anomalies, along with evaluation results, were saved to a CSV file for further analysis or reporting.
-Metrics were displayed to quantify the model's performance.
+The detected anomalies, along with evaluation results, were saved to a CSV file for further analysis or reporting. Metrics were displayed to quantify the model's performance.
 
 **Insights and Findings**
 
@@ -301,26 +285,19 @@ While the model successfully identifies outliers statistically, the interpretati
 
 Without a labeled dataset, the model relies on statistical thresholds to detect anomalies, which may not perfectly align with real-world definitions of "anomalous behavior."
 
-***Ground Truth Assumptions:***
-Using a threshold-based ground truth (e.g., 95th percentile) is an approximation that might not reflect actual anomalies.
+***Ground Truth Assumptions:*** Using a threshold-based ground truth (e.g., 95th percentile) is an approximation that might not reflect actual anomalies.
 
 **Future Directions**
 
-***Labeled Dataset:***
-Incorporate ground-truth labels for anomalies, enabling supervised learning and more accurate evaluation metrics.
+***Labeled Dataset:*** Incorporate ground-truth labels for anomalies, enabling supervised learning and more accurate evaluation metrics.
 
-***Enhanced Methods:***
-Experiment with advanced anomaly detection algorithms, such as machine learning models (e.g., Isolation Forest, One-Class SVM).
+***Enhanced Methods:*** Experiment with advanced anomaly detection algorithms, such as machine learning models (e.g., Isolation Forest, One-Class SVM).
 
-***Real-Time Monitoring:***
-Extend the model to handle real-time data streams for proactive anomaly detection.
+***Real-Time Monitoring:*** Extend the model to handle real-time data streams for proactive anomaly detection.
 
-***Granular Analysis:***
-Drill down into anomalies by categories like Country, Transaction Type, or Industry to uncover targeted insights.
+***Granular Analysis:*** Drill down into anomalies by categories like Country, Transaction Type, or Industry to uncover targeted insights.
 
-***Integration with External Data:***
-Include external factors (e.g., economic indicators, geopolitical events) to improve anomaly interpretation and contextualize unusual patterns.
-
+***Integration with External Data:*** Include external factors (e.g., economic indicators, geopolitical events) to improve anomaly interpretation and contextualize unusual patterns.
 
 *Conclusion*
 
@@ -328,7 +305,4 @@ With respect to Time Series Anomaly Detection carried our above, this analysis s
 
 By understanding when and where anomalies occur, organizations can:
 
-Detect fraud or operational errors early.
-Monitor transaction trends effectively.
-Improve the overall accuracy and integrity of their financial processes.
-In the future, this approach can be enhanced by incorporating machine learning techniques for anomaly detection, integrating real-time monitoring systems, and refining anomaly classification with domain-specific insights. This work lays the groundwork for building a more robust and scalable system for anomaly detection in financial data.
+Detect fraud or operational errors early. Monitor transaction trends effectively. Improve the overall accuracy and integrity of their financial processes. In the future, this approach can be enhanced by incorporating machine learning techniques for anomaly detection, integrating real-time monitoring systems, and refining anomaly classification with domain-specific insights. This work lays the groundwork for building a more robust and scalable system for anomaly detection in financial data.
